Adding new resources